# agent-memory-briefcase

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/demo_bundle/.agent-memory-briefcase/: briefcase.json  commands.json  constraints.md  glossary.json  ownership.json  profile.json  test_evidence.json
examples/demo_bundle/.agent-memory-briefcase/decisions/: 20260608-json-and-markdown-mirror.json  20260608-json-and-markdown-mirror.md
examples/demo_bundle/.agent-memory-briefcase/sessions/: 20260608-bootstrap-memory-bundle.json  20260608-bootstrap-memory-bundle.md
src/agent_memory_briefcase/: __init__.py  __main__.py  briefing.py  cli.py  doctor.py  linting.py  models.py  render.py  storage.py  utils.py
tests/: test_briefing.py  test_cli.py  test_doctor.py  test_linting.py  test_render.py  test_storage.py
